Added Inventory list with details,update,delete

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,5 +5,8 @@
 </head>
 <body>
 <h1 th:text="${message}">Default Message</h1>
+<p>
+    <a href="/inventory">Go to Inventory</a>
+</p>
 </body>
 </html>
